--- a/Figure_7.ipynb
+++ b/Figure_7.ipynb
@@ -92,7 +92,7 @@
     "with open(tmp, 'w') as f:\n",
     "    f.write(pretty._repr_html_().replace('><thead> ', 'style=\"border-spacing: 0;\"><thead> '))\n",
     "    \n",
-    "pretty"
+    "# pretty"
    ]
   },
   {
