--- a/Paper/6_experiment.tex
+++ b/Paper/6_experiment.tex
@@ -226,7 +226,7 @@ therefore, an ML model is more likely to perform poorly on those tuples.
 	\label{fig:airlines-summary}
 	\vspace{2mm}
 	\centering
-	\includegraphics[width=0.75\linewidth]{../PlotsFigure_5.pdf}
+	\includegraphics[width=0.75\linewidth]{../Plot/Figure_5.pdf}
 	\vspace{-3mm}	
 	\caption{\Invariant violation strongly correlates with the absolute error
 	 of delay prediction of a linear regression model.}
@@ -339,21 +339,21 @@ accuracy. \reviseone{Their correlation persists even in the presence of noise.}}
 	\hspace{-3mm}
 	\begin{subfigure}[t]{0.16\textwidth}
 		\centering
-		\includegraphics[width=\linewidth]{../PlotsFigure_6_a.pdf}
+		\includegraphics[width=\linewidth]{../Plot/Figure_6_a.pdf}
 	\vspace{-5mm}
 	\caption{\phantom{randomrand}}
 	\label{fig:har-ml-experiment}
 	\end{subfigure}	
 	\begin{subfigure}[t]{0.16\textwidth}
 		\centering
-		\includegraphics[width=\linewidth]{../PlotsFigure_6_b.pdf}
+		\includegraphics[width=\linewidth]{../Plot/Figure_6_b.pdf}
 	\vspace{-5mm}
 	\caption{}
 	\label{fig:har-ml-experiment-noise}
 	\end{subfigure}	
 	\begin{subfigure}[t]{0.16\textwidth}
 		\centering
-		\includegraphics[width=\linewidth]{../PlotsFigure_6_c.pdf}
+		\includegraphics[width=\linewidth]{../Plot/Figure_6_c.pdf}
 	\vspace{-5mm}
 	\caption{}
 	\label{fig:gradual-drift-har}
@@ -417,7 +417,7 @@ magnitude (violation) indeed increases as more people alter their activities.
 
 \begin{figure*}[t]
 	\centering	
-	\includegraphics[width=.8\linewidth]{../PlotsFigure_8.pdf}	
+	\includegraphics[width=.8\linewidth]{../Plot/Figure_8.pdf}	
 		\vspace{-5mm}
 	 \caption{In the EVL benchmark, \system quantifies drift correctly for all
 	 cases, outperforming other approaches. PCA-SPLL fails to detect drift in a few cases by
